20061205
 - (djm) [auth.c] Fix NULL pointer dereference in fakepw().  Crash would
   occur if the server did not have the privsep user and an invalid user
   tried to login and both privsep and krb5 auth are disabled; ok dtucker@

20061108
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2006/11/07 13:02:07
     [dh.c]
     BN_hex2bn returns int; from dtucker@

20061107
 - (dtucker) [sshd.c] Use privsep_pw if we have it, but only require it
   if we absolutely need it.  Pointed out by Corinna, ok djm@
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2006/11/06 21:25:28
     [auth-rsa.c kexgexc.c kexdhs.c key.c ssh-dss.c sshd.c kexgexs.c
     ssh-keygen.c bufbn.c moduli.c scard.c kexdhc.c sshconnect1.c dh.c rsa.c]
     add missing checks for openssl return codes; with & ok djm@
   - markus@cvs.openbsd.org 2006/11/07 10:31:31
     [monitor.c version.h]
     correctly check for bad signatures in the monitor, otherwise the monitor
     and the unpriv process can get out of sync. with dtucker@, ok djm@,
     dtucker@
 - (dtucker) [README contrib/{caldera,redhat,contrib}/openssh.spec] Bump
   versions.
 - (dtucker) Release 4.5p1.

20061105
 - (djm) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2006/10/28 18:08:10
     [ssh.1]
     correct/expand example of usage of -w; ok jmc@ stevesk@
   - markus@cvs.openbsd.org 2006/10/31 16:33:12
     [kexdhc.c kexdhs.c kexgexc.c kexgexs.c]
     check DH_compute_key() for -1 even if it should not happen because of
     earlier calls to dh_pub_is_valid(); report krahmer at suse.de; ok djm

20061101
 - (dtucker) [openbsd-compat/port-solaris.c] Bug #1255: Make only hwerr
   events fatal in Solaris process contract support and tell it to signal
   only processes in the same process group when something happens.
   Based on information from andrew.benham at thus.net and similar to
   a patch from Chad Mynhier.  ok djm@

20061027
- (djm) [auth.c] gc some dead code

20061023
 - (djm) OpenBSD CVS Sync