@@ -2,6 +2,7 @@
  - (djm) [auth.c] Fix NULL pointer dereference in fakepw().  Crash would
    occur if the server did not have the privsep user and an invalid user
    tried to login and both privsep and krb5 auth are disabled; ok dtucker@
+ - (djm) [bsd-asprintf.c] Better test for bad vsnprintf lengths; ok dtucker@
 
 20061108
  - (dtucker) OpenBSD CVS Sync
@@ -2616,4 +2617,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4590 2006/12/04 22:08:54 djm Exp $
+$Id: ChangeLog,v 1.4591 2006/12/05 11:58:09 djm Exp $
